--- a/pom.xml
+++ b/pom.xml
@@ -216,5 +216,10 @@
   <prerequisites>
     <maven>3.0.3</maven>
   </prerequisites>
-
+  <distributionManagement>
+    <snapshotRepository>
+      <id>nexus-snapshots</id>
+      <url>http://54.234.131.92:8081/repository/maven-snapshots/</url>
+    </snapshotRepository>
+  </distributionManagement>
 </project>
